--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-.idea
-exercicios-projetoijedi.iml
+                           .idea
+                           .gitignore
+                           exercicios-projetoijedi.iml
+                           out
